# GSW-node

./: .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TeosBindings.cc  auto-top.gypi  auto.gypi  binding.gyp  docker-compose.yaml  globals.html  index.html  lib-types.d.ts  lib.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.cjs  tsconfig.json
.github/workflows/: release.yml
TeosCpp/: .gitignore  CMakeLists.txt  TeosCpp.depend  TeosCpp.layout  teos-cpp.cpp
TeosCpp/include/: SaarDataHandler.h  TeosBase.h  TeosIce.h  TeosSea.h  delta_sa_ref.h  delta_sa_ref_map.h  gsw_structs.h  map_struct.h  saar_ref.h  saar_ref_map.h
TeosCpp/src/: SaarDataHandler.cpp  TeosBase.cpp  TeosIce.cpp  TeosSea.cpp
TeosNodeBuilder/: binding.gyp  package.json  tsconfig.json
assets/js/: search.json
scripts/: create-env.sh  fix_ndts_imports.py  get_methods.py
test/: TeosBase.test.ts  TeosIce.test.ts  TeosSea.test.ts
